# ChangeLog for app-arch/pdumpfs
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/pdumpfs/Attic/ChangeLog,v 1.11 2004/08/25 03:32:12 matsuu Exp $

*pdumpfs-1.2 (25 Aug 2004)

  25 Aug 2004; MATSUU Takuto <matsuu@gentoo.org> -pdumpfs-0.9.ebuild,
  pdumpfs-1.1.ebuild, +pdumpfs-1.2.ebuild:
  Version bumped.
  Removed old ebuilds.

*pdumpfs-1.1 (13 Jul 2004)

  13 Jul 2004; MATSUU Takuto <matsuu@gentoo.org> -pdumpfs-0.6.ebuild,
  -pdumpfs-0.8.ebuild, pdumpfs-0.9.ebuild, +pdumpfs-1.1.ebuild:
  Version bumped.

*pdumpfs-0.9 (06 Jun 2004)

  06 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> +pdumpfs-0.9.ebuild:
  Version bumped.

  01 Jun 2004; Aron Griffis <agriffis@gentoo.org> pdumpfs-0.6.ebuild,
  pdumpfs-0.8.ebuild:
  Fix use invocation

  14 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> pdumpfs-0.6.ebuild:
  Removed S=.

  12 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> pdumpfs-0.6.ebuild,
  pdumpfs-0.8.ebuild:
  virtual/ruby fix

  01 Apr 2004; David Holm <dholm@gentoo.org> pdumpfs-0.8.ebuild:
  Added to ~ppc.

*pdumpfs-0.8 (01 Apr 2004)

  01 Apr 2004; <matsuu@gentoo.org> pdumpfs-0.8.ebuild:
  Version bumped.
  Added ~amd64 to KEYWORDS.

  12 Mar 2004; Daniel Ahlberg <aliz@gentoo.org> pdumpfs-0.6.ebuild:
  x86 unmask.

*pdumpfs-0.6 (09 Sep 2003)

  09 Sep 2003; MATSUU Takuto <matsuu@gentoo.org> pdumpfs-0.6.ebuild:
  Initial import. Bug #26986
