@@ -1,6 +1,8 @@
 MD5 19a0142d30d735fccca76a0c2a2698b5 pdumpfs-1.2.ebuild 807
 MD5 e3f09bdb22c25f8eb7637de2e6964c0a pdumpfs-1.1.ebuild 803
-MD5 e118bd1d92e1b05affd838f56ee65c1c ChangeLog 1418
+MD5 59146cfa81e54e61e0b06f2658c5f839 ChangeLog 1535
+MD5 feec839c0f1347d6cceaa793f7accc13 pdumpfs-1.3.ebuild 815
 MD5 e23f86946cb3798206fa0a83a87f6240 metadata.xml 529
 MD5 68d140ae3be1200ac000c394c04e8449 files/digest-pdumpfs-1.1 62
 MD5 ab8da9e6a9945796378f6778b48ada82 files/digest-pdumpfs-1.2 62
+MD5 2dc086af78e1bcfdd2d2a80b88d355d4 files/digest-pdumpfs-1.3 62
