@@ -1,0 +1,34 @@
+# Copyright 1999-2004 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/pdumpfs/Attic/pdumpfs-1.3.ebuild,v 1.1 2004/12/20 15:57:46 matsuu Exp $
+
+DESCRIPTION="a daily backup system similar to Plan9's dumpfs"
+HOMEPAGE="http://www.namazu.org/~satoru/pdumpfs/"
+SRC_URI="http://www.namazu.org/~satoru/pdumpfs/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~x86 ~amd64 ~ppc ~sparc"
+IUSE="cjk"
+
+DEPEND=">=virtual/ruby-1.6.8"
+
+src_compile() {
+	make pdumpfs || die "make pdumpfs failed"
+	make check || die "make check failed"
+}
+
+src_install() {
+	dobin pdumpfs || die
+
+	doman man/man8/pdumpfs.8
+	dohtml -r doc/*
+
+	if use cjk; then
+		insinto /usr/share/man/ja/man8
+		doins man/ja/man8/pdumpfs.8
+		dohtml pdumpfs-ja.html
+	fi
+
+	dodoc ChangeLog README
+}
