@@ -1,6 +1,11 @@
 # ChangeLog for app-arch/pdumpfs
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/pdumpfs/Attic/ChangeLog,v 1.11 2004/08/25 03:32:12 matsuu Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/pdumpfs/Attic/ChangeLog,v 1.12 2004/12/20 15:57:46 matsuu Exp $
+
+*pdumpfs-1.3 (21 Dec 2004)
+
+  21 Dec 2004; MATSUU Takuto <matsuu@gentoo.org> +pdumpfs-1.3.ebuild:
+  Version bumped.
 
 *pdumpfs-1.2 (25 Aug 2004)
 
